--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "hv-uikit-react",
   "private": true,
-  "author": "Hitachi Vantara UI Kit Team",
-  "description": "The React component library for the Hitachi Vantara Design System.",
+  "description": "The React component library for the Next Design System.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
+  "author": "Hitachi Vantara UI Kit Team",
   "repository": {
     "type": "git",
     "url": "https://github.com/lumada-design/hv-uikit-react.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lumada-design/hv-uikit-react/issues"
   },
   "license": "Apache-2.0",
   "scripts": {
@@ -42,6 +45,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "conventional-changelog-cli": "^2.2.2",
@@ -53,12 +58,14 @@
     "jsdom": "^20.0.3",
     "lerna": "^6.3.0",
     "lint-staged": "^13.0.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.8.3",
     "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.8.4",
     "vite": "^3.2.4",
+    "vite-plugin-dts": "2.0.0-beta.3",
     "vite-tsconfig-paths": "^3.5.2",
     "vitest": "^0.25.3",
     "yup": "^1.0.0"
@@ -79,8 +86,5 @@
     "extends": [
       "@commitlint/config-conventional"
     ]
-  },
-  "engines": {
-    "node": ">=16.16.0"
   }
 }
