--- a/packages/icons/tsconfig.json
+++ b/packages/icons/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ESNext",
     "composite": true,
-    "allowJs": true,
+    "baseUrl": "bin",
     "rootDir": "bin",
-    "outDir": "dist"
+    "outDir": "dist",
+    "allowJs": true
   },
   "include": ["bin"],
-  "exclude": ["src", "dist"],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
