--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -7,15 +7,22 @@ runs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Install pnpm
-      uses: pnpm/action-setup@v2
-      with:
-        version: 7
-
     - name: Install Node.js
       uses: actions/setup-node@v3
       with:
         node-version: 16
+
+    - name: Install pnpm
+      uses: pnpm/action-setup@v2
+      with:
+        run_install: false
+        version: 7
+
+    - name: Get pnpm store directory
+      id: pnpm-cache
+      shell: bash
+      run: |
+        echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
 
     - name: Install dependencies
       env:
