--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
+registry=http://localhost:4873/
 # @hitachivantara:registry=https://repo.orl.eng.hitachivantara.com/artifactory/api/npm/uikit-npm-release-orl/
 
 # Make storybook happy with its deps
