chore: add Vite + React + TS + UI Kit example

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -34,8 +34,8 @@
     "prepublishOnly": "pnpm build && npx clean-publish --fields main"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
     "@emotion/styled": "^11.10.5",
