--- a/tools/addon-theme-switcher/package.json
+++ b/tools/addon-theme-switcher/package.json
@@ -24,8 +24,8 @@
     "@storybook/components": "^6.4.20",
     "@storybook/core-events": "^6.4.20",
     "@storybook/theming": "^6.4.22",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
     "@hitachivantara/uikit-react-core": "workspace:*",
