--- a/.github/workflows/release-next.yml
+++ b/.github/workflows/release-next.yml
@@ -18,7 +18,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
+      
+      - name: Fetch git tags
+        run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+        
       - name: Install Dependencies
         uses: ./.github/actions/install-dependencies
 
