--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,6 +36,7 @@
   "peerDependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@emotion/cache": "^11.10.5",
     "@mui/material": "^5.11.0",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
@@ -51,7 +52,6 @@
     "hoist-non-react-statics": "^3.3.2",
     "lodash": "^4.17.21",
     "notistack": "^2.0.8",
-    "react-google-charts": "^4.0.0",
     "react-popper": "^2.3.0",
     "react-resize-detector": "^7.1.2",
     "react-table": "^7.8.0",
