--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "lint:fix": "pnpm lint --fix",
     "lint-staged": "lint-staged",
     "typecheck": "pnpm -r -F='./packages/**' typecheck",
-    "publish:release": "lerna publish --conventional-graduate --create-release github --yes",
-    "publish:next": "lerna publish --conventional-prerelease --create-release github --yes --dist-tag next",
+    "publish:release": "lerna publish --conventional-commits --conventional-graduate --create-release github --yes",
+    "publish:next": "lerna publish --conventional-commits --conventional-prerelease --create-release github --yes --dist-tag next",
     "preinstall": "npx only-allow pnpm",
     "prepare": "npx husky install .config/husky"
   },
@@ -50,12 +50,10 @@
     "@types/react-dom": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
-    "conventional-changelog-cli": "^2.2.2",
     "eslint": "^8.27.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "react-google-charts": "^4.0.0",
     "formik": "^2.2.9",
     "jsdom": "^20.0.3",
     "lerna": "^6.3.0",
@@ -65,6 +63,7 @@
     "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
     "typescript": "^4.8.4",
     "vite": "^3.2.4",
     "vite-plugin-dts": "2.0.0-beta.3",
