--- a/examples/uikit-vite-ts/package.json
+++ b/examples/uikit-vite-ts/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/css": "^11.10.6",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@hitachivantara/uikit-react-core": "^5.0.0-next.3",
-    "@hitachivantara/uikit-react-icons": "^5.0.0-next.3",
+    "@hitachivantara/uikit-react-core": "^5.0.0-next.11",
+    "@hitachivantara/uikit-react-icons": "^5.0.0-next.11",
     "@mui/material": "^5.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
