--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -66,8 +66,8 @@
     "types": "dist/types/index.d.ts",
     "exports": {
       ".": {
-        "require": "dist/cjs/index.cjs",
-        "import": "dist/esm/index.js"
+        "require": "./dist/cjs/index.cjs",
+        "import": "./dist/esm/index.js"
       }
     }
   },
