--- a/.github/workflows/release-next.yml
+++ b/.github/workflows/release-next.yml
@@ -35,4 +35,4 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.HV_NPM_AUTOMATION_TOKEN}}
         run: |
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
-          pnpm publish:next
+          npm run publish:next
