--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -27,14 +27,14 @@
     "build:js": "vite build",
     "clean": "npx rimraf dist package",
     "typecheck": "tsc --noEmit",
-    "prepublishOnly": "pnpm build && npx clean-publish --fields main"
+    "prepublishOnly": "npm run build && npx clean-publish --fields main --files tsconfig.json"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@hitachivantara/uikit-styles": "workspace:*"
+    "@hitachivantara/uikit-styles": "*"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
