--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -18,7 +18,7 @@
     "build:js": "vite build",
     "clean": "npx rimraf dist package",
     "typecheck": "tsc --noEmit",
-    "prepublishOnly": "pnpm build && npx clean-publish --fields main"
+    "prepublishOnly": "npm run build && npx clean-publish --fields main --files tsconfig.json"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
