chore: publish docs on next release

--- a/.github/workflows/release-next.yml
+++ b/.github/workflows/release-next.yml
@@ -36,3 +36,12 @@ jobs:
         run: |
           npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
           npm run publish:next
+
+  documentation:
+    name: Documentation
+    uses: ./.github/workflows/documentation.yml
+    needs: [release]
+    secrets:
+      ORG_GHPAGES_DEPLOY_KEY: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
+    with:
+      publish-folder: next
