--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -16,5 +16,5 @@ runs:
       env:
         # ensure dev dependencies are installed
         NODE_ENV: development
-      run: npm i --force
+      run: npm i --legacy-peer-deps
       shell: bash
