--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@emotion/css": "^11.10.6",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@hitachivantara/uikit-react-core": "*",
     "@hitachivantara/uikit-react-icons": "*",
     "@hitachivantara/uikit-styles": "*",
