--- a/.github/actions/deploy-documentation/action.yml
+++ b/.github/actions/deploy-documentation/action.yml
@@ -12,7 +12,7 @@ runs:
         else
           echo "DEPLOYMENT_REF=${{ github.ref }}" >> $GITHUB_ENV
         fi
-        echo "${{ DEPLOYMENT_REF }}"
+        echo "${{ env.DEPLOYMENT_REF }}"
         
     - name: Checkout
       uses: actions/checkout@v3
@@ -27,9 +27,9 @@ runs:
       with:
         step: start
         token: ${{ env.GITHUB_TOKEN }}
-        env: ${{env.DOCUMENTATION_PUBLISH_FOLDER}}
-        ref: ${{ DEPLOYMENT_REF }}
-        desc: ${{env.DOCUMENTATION_PUBLISH_MESSAGE}}
+        env: ${{ env.DOCUMENTATION_PUBLISH_FOLDER }}
+        ref: ${{ env.DEPLOYMENT_REF }}
+        desc: ${{ env.DOCUMENTATION_PUBLISH_MESSAGE }}
 
     - name: Checkout Documentation Repository
       uses: actions/checkout@v3
