--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -9,10 +9,10 @@ on:
     inputs:
       publish-folder:
         type: string
-        default: ${{ github.ref_name }}
 
 env:
   ORG_GHPAGES_DEPLOY_KEY: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
+  PUBLISH_FOLDER: ${{ inputs.publish-folder || github.ref_name }}
 
 jobs:
   build-deploy:
@@ -31,8 +31,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ORG_GHPAGES_DEPLOY_KEY: ${{ env.ORG_GHPAGES_DEPLOY_KEY }}
-          PUBLISH_FOLDER: ${{ github.event.number || github.ref_name }}
           DOCUMENTATION_PUBLISH_REPO: ${{ github.repository_owner }}/${{ github.repository_owner }}.github.io
-          DOCUMENTATION_PUBLISH_FOLDER: uikit/${{ inputs.publish-folder }}
-          DOCUMENTATION_PUBLISH_MESSAGE: "docs: documentation for ${{ inputs.publish-folder }} of ${{ github.repository }}"
-          DOCUMENTATION_URL: https://${{ github.repository_owner }}.github.io/uikit/${{ inputs.publish-folder }}/
+          DOCUMENTATION_PUBLISH_FOLDER: uikit/${{ env.PUBLISH_FOLDER }}
+          DOCUMENTATION_PUBLISH_MESSAGE: "docs: documentation for ${{ env.PUBLISH_FOLDER }} of ${{ github.repository }}"
+          DOCUMENTATION_URL: https://${{ github.repository_owner }}.github.io/uikit/${{ env.PUBLISH_FOLDER }}/
