chore: fix lerna publish

--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
   },
   "license": "Apache-2.0",
   "scripts": {
-    "dev": "npm run dev --workspace=app",
+    "dev": "npm run dev -w app",
     "doc": "start-storybook -p 6006 --no-manager-cache",
-    "build": "npm run build --workspace=packages",
+    "build": "npm run build -w packages",
     "build:doc": "build-storybook --docs -o dist --quiet",
-    "test": "npm run test --workspace=packages --if-present",
+    "test": "npm run test -w packages --if-present",
     "test:pa11y": "npx pa11y-ci -c config/pa11yci.config.js",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "lint": "eslint . --ext .ts,.tsx --cache",
     "lint:fix": "npm run lint --fix",
     "lint-staged": "lint-staged",
-    "typecheck": "npm run typecheck --workspace=packages --if-present",
-    "publish:release": "lerna publish --conventional-graduate --create-release github --yes",
-    "publish:next": "lerna publish --conventional-prerelease --create-release github --yes --dist-tag next",
+    "typecheck": "npm run typecheck -w packages --if-present",
+    "publish:release": "lerna publish --conventional-graduate --yes",
+    "publish:next": "lerna publish --conventional-prerelease --yes --preid next --dist-tag next",
     "prepare": "npx husky install .config/husky"
   },
   "devDependencies": {
