--- a/lerna.json
+++ b/lerna.json
@@ -8,7 +8,9 @@
     "version": {
       "allowBranch": ["master", "next*", "feat/*", "fix/*", "bug/*"],
       "message": "chore(release): publish",
-      "conventionalCommits": true
+      "conventionalCommits": true,
+      "createRelease": "github",
+      "contents": "package"
     }
   }
 }
