--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -27,7 +27,7 @@
     "build:js": "vite build",
     "clean": "npx rimraf dist package",
     "typecheck": "tsc --noEmit",
-    "prepublishOnly": "npm run build && npx clean-publish --fields main --files tsconfig.json"
+    "prepublishOnly": "npm run build && npx clean-publish"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
@@ -60,6 +60,12 @@
   },
   "clean-publish": {
     "withoutPublish": true,
-    "tempDir": "package"
+    "tempDir": "package",
+    "fields": [
+      "main"
+    ],
+    "files": [
+      "tsconfig.json"
+    ]
   }
 }
