--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -3,7 +3,7 @@
   "version": "5.0.0-next.17",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
-  "description": "A collection of icons to use with Hitachi Vantara's React Components.",
+  "description": "NEXT Design System icons packaged as a set of React components.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "main": "./bin/index.ts",
   "sideEffects": false,
