--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -3,7 +3,7 @@
   "version": "5.0.0-next.15",
   "private": false,
   "author": "Hitachi Vantara UI Kit Team",
-  "description": "UI Kit core React components for the Next Design System.",
+  "description": "Shared React contexts for the NEXT UI Kit",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
   "main": "./src/index.ts",
   "sideEffects": false,
