--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -62,6 +62,7 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "npm-run-all": "^4.1.5",
     "tsc-alias": "^1.8.2"
   },
   "files": [
