--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -38,7 +38,8 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11"
+    "@types/react-dom": "^18.0.11",
+    "npm-run-all": "^4.1.5"
   },
   "files": [
     "dist"
