--- a/app/package.json
+++ b/app/package.json
@@ -10,9 +10,9 @@
     "@emotion/css": "^11.10.6",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@hitachivantara/uikit-react-core": "*",
-    "@hitachivantara/uikit-react-icons": "*",
-    "@hitachivantara/uikit-styles": "*",
+    "@hitachivantara/uikit-react-core": "5.0.0-next.18",
+    "@hitachivantara/uikit-react-icons": "5.0.0-next.18",
+    "@hitachivantara/uikit-styles": "5.0.0-next.18",
     "formik": "^2.2.9",
     "i18next": "^22.4.10",
     "i18next-browser-languagedetector": "^7.0.1",
