--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,9 +43,9 @@
   },
   "dependencies": {
     "@emotion/cache": "^11.10.5",
-    "@hitachivantara/uikit-react-icons": "*",
-    "@hitachivantara/uikit-react-shared": "*",
-    "@hitachivantara/uikit-styles": "*",
+    "@hitachivantara/uikit-react-icons": "5.0.0-next.18",
+    "@hitachivantara/uikit-react-shared": "5.0.0-next.16",
+    "@hitachivantara/uikit-styles": "5.0.0-next.18",
     "@popperjs/core": "^2.11.6",
     "attr-accept": "^2.2.2",
     "clsx": "^1.2.1",
