--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -39,7 +39,7 @@
     "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@hitachivantara/uikit-styles": "*"
+    "@hitachivantara/uikit-styles": "5.0.0-next.18"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
