--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,6 +47,7 @@
     "@hitachivantara/uikit-react-shared": "^5.0.0-next.18",
     "@hitachivantara/uikit-styles": "^5.0.0-next.20",
     "@popperjs/core": "^2.11.6",
+    "@types/react-table": "^7.7.14",
     "attr-accept": "^2.2.2",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
