--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,6 +11,13 @@ jobs:
     name: Static Checks
     uses: ./.github/workflows/static-checks.yml
 
+  applitools:
+    name: Applitools
+    uses: ./.github/workflows/tests-applitools.yml
+    needs: [static-checks]
+    secrets:
+      APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
+
   documentation:
     name: Documentation
     uses: ./.github/workflows/documentation.yml
@@ -19,13 +26,6 @@ jobs:
       ORG_GHPAGES_DEPLOY_KEY: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
     with:
       publish-folder: pr-${{ github.event.number }}
-
-  # applitools:
-  #   name: Applitools
-  #   uses: ./.github/workflows/tests-applitools.yml
-  #   needs: [static-checks]
-  #   secrets:
-  #     APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
 
   # pa11y:
   #   name: Pa11y
