--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -63,6 +63,7 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@vitest/coverage-c8": "^0.29.7",
     "npm-run-all": "^4.1.5",
     "tsc-alias": "^1.8.2"
   },
