--- a/.github/workflows/release-next.yml
+++ b/.github/workflows/release-next.yml
@@ -33,6 +33,10 @@ jobs:
       
       - name: Fetch git tags
         run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+        with:
+          # Pulls all commits (needed for semantic release to correctly version)
+          # See https://github.com/semantic-release/semantic-release/issues/1526
+          fetch-depth: "0"
         
       - name: Publish Setup
         run: |
