--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@emotion/core": "^11.0.0",
+    "@emotion/css": "^11.10.6",
     "@mdx-js/react": "^1.6.22",
     "@mui/material": "^5.11.12",
     "@playwright/test": "^1.31.2",
