--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "npm run build -w packages",
     "build:doc": "build-storybook --docs -o dist --quiet",
     "test": "npm run test -w packages --if-present",
-    "test:pa11y": "npx pa11y-ci -c .config/pa11yci.config.js",
+    "test:pa11y": "pa11y-ci -c .config/pa11yci.config.js",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "lint": "eslint . --ext .ts,.tsx --cache",
@@ -56,10 +56,13 @@
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-import": "^2.27.5",
     "formik": "^2.2.9",
+    "html-react-parser": "^3.0.15",
     "jsdom": "^21.1.0",
     "lerna": "^6.5.1",
     "lint-staged": "^13.1.2",
     "npm-run-all": "^4.1.5",
+    "pa11y-ci": "^3.0.1",
+    "pa11y-ci-reporter-html": "^5.1.1",
     "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
@@ -92,8 +95,5 @@
   "workspaces": [
     "packages/*",
     "app/"
-  ],
-  "dependencies": {
-    "html-react-parser": "^3.0.12"
-  }
+  ]
 }
