--- a/.github/workflows/pr-close.yml
+++ b/.github/workflows/pr-close.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Documentation Repository
+      - name: Checkout
         uses: actions/checkout@v3
         with:
           repository: ${{ env.DOCUMENTATION_PUBLISH_REPO }}
