--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -20,22 +20,25 @@ jobs:
   applitools:
     name: Applitools Tests
     uses: ./.github/workflows/tests-applitools.yml
-    needs: [static-checks]
     secrets:
       APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
 
-  pa11y:
-    name: Accessibility Tests
-    uses: ./.github/workflows/tests-pa11y.yml
-    needs: [static-checks]
+  # pa11y:
+  #   name: Pa11y Tests
+  #   uses: ./.github/workflows/tests-pa11y.yml
 
   security-scans:
     name: Security Scans
     uses: ./.github/workflows/security.yml
+    secrets:
+      CODE_DX_URL: ${{ secrets.CODE_DX_URL }}
+      CODE_DX_API_KEY: ${{ secrets.CODE_DX_API_KEY }}
+      BLACKDUCK_URL: "${{ secrets.BLACKDUCK_SERVER_URL }}"
+      BLACKDUCK_TOKEN: "${{ secrets.BLACKDUCK_TOKEN }}"
 
   notify-end-internal:
     name: Notify End Internal
-    needs: [static-checks, applitools, pa11y]
+    needs: [static-checks, applitools, security-scans]
     if: failure()
     runs-on: ubuntu-latest
 
