--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -1,3 +1,17 @@
 {
-  "extends": "../tsconfig.json"
+  "extends": "../tsconfig.json",
+  "references": [
+    {
+      "path": "../packages/icons/tsconfig.json"
+    },
+    {
+      "path": "../packages/styles/tsconfig.json"
+    },
+    {
+      "path": "../packages/core/tsconfig.json"
+    },
+    {
+      "path": "../packages/shared/tsconfig.json"
+    }
+  ]
 }
