--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,16 @@
 name: Release
 
 on:
+  repository_dispatch:
+    types: [release]
   workflow_dispatch:
     branches:
       - master
       - "next*"
 
 jobs:
-  release:
-    name: Release
+  publish:
+    name: Publish
     runs-on: ubuntu-latest
 
     env:
@@ -37,7 +39,7 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
-      - name: Publish NPM
+      - name: Publish to NPM
         env:
           NODE_AUTH_TOKEN: ${{secrets.HV_NPM_AUTOMATION_TOKEN}}
         run: |
@@ -52,11 +54,21 @@ jobs:
             exit 1
           fi
 
-  documentation:
-    name: Documentation
+      - name: Check for new package
+        run: |
+          latest_package=$(npm view <package-name> version)
+          if [[ ! -z "$latest_package" ]]; then
+            echo "New package $latest_package published"
+            echo "PUBLISH_DOC=true" >> $GITHUB_ENV
+          else
+            echo "No new package published"
+          fi
+
+  publish-doc:
+    name: Publish Doc
+    needs: [publish]
+    if: env.PUBLISH_DOC == "true"
     uses: ./.github/workflows/documentation.yml
-    needs: [release]
-    if: ${{ contains(needs.release.outputs.packages_published, 'true') }}
     secrets:
       ORG_GHPAGES_DEPLOY_KEY: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
     with:
@@ -65,7 +77,7 @@ jobs:
   notify-release:
     name: Notify release
     runs-on: ubuntu-latest
-    needs: [documentation]
+    needs: [publish-doc]
 
     env:
       DOCUMENTATION_URL: https://${{ github.repository_owner }}.github.io/uikit/${{ github.ref_name }}/
