chore: trigger release on nightly run

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -36,8 +36,8 @@ jobs:
       BLACKDUCK_URL: "${{ secrets.BLACKDUCK_URL }}"
       BLACKDUCK_TOKEN: "${{ secrets.BLACKDUCK_TOKEN }}"
 
-  notify-end-internal:
-    name: Notify End Internal
+  notify-fail:
+    name: Notify Fail
     needs: [static-checks, applitools, security-scans]
     if: failure()
     runs-on: ubuntu-latest
@@ -45,23 +45,12 @@ jobs:
     steps:
       - uses: technote-space/workflow-conclusion-action@v1
 
-      - name: generate conclusion color
-        id: conclusion_color
-        uses: actions/github-script@v3
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            if("${{ env.WORKFLOW_CONCLUSION }}" === "success") core.exportVariable("COLOR", "#63A621")
-            else if("${{ env.WORKFLOW_CONCLUSION }}" === "failure") core.exportVariable("COLOR", "#C62828")
-            else if("${{ env.WORKFLOW_CONCLUSION }}" === "neutral") core.exportVariable("COLOR", "#BCBCBC")
-            else if("${{ env.WORKFLOW_CONCLUSION }}" === "cancelled") core.exportVariable("COLOR", "#FFD00A")
-            else if("${{ env.WORKFLOW_CONCLUSION }}" === "timed_out") core.exportVariable("COLOR", "#FFD00A")
-
       - name: Notify Fail
         uses: hbfernandes/slack-action@1.0
         env:
           SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
           CONCLUSION: ${{ env.WORKFLOW_CONCLUSION }}
+          COLOR: "#C62828"
         with:
           args: |
             {
@@ -75,3 +64,17 @@ jobs:
                 }
               ]
             }
+
+  release:
+    name: Release
+    if: github.event_name == 'schedule' && !contains(github.event.head_commit.message, '${ RELEASE_COMMIT_MESSAGE }')
+    needs: [static-checks, applitools, security-scans]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Trigger Release
+        # repo scope personal token is required to generate a dispatch event
+        run: |
+          curl -X POST \
+            https://api.github.com/repos/${{ github.repository }}/dispatches \
+            -H 'Authorization: token ${{ secrets.BUILD_TOKEN }}' \
+            -d '{"event_type": "release"}'
