--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,7 +72,7 @@ jobs:
   publish-doc:
     name: Publish Doc
     needs: [publish]
-    if: needs.publish.outputs.packages_published == 'true'
+    if: needs.publish.outputs.published == 'true'
     uses: ./.github/workflows/documentation.yml
     secrets:
       ORG_GHPAGES_DEPLOY_KEY: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
