--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -35,6 +35,12 @@
     },
     {
       "path": "../packages/shared/tsconfig.json"
+    },
+    {
+      "path": "../packages/lab/tsconfig.json"
+    },
+    {
+      "path": "../packages/code-editor/tsconfig.json"
     }
   ]
 }
