--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -42,7 +42,8 @@
   },
   "dependencies": {
     "@emotion/cache": "^11.10.5",
-    "@hitachivantara/uikit-react-core": "^5.2.0"
+    "@hitachivantara/uikit-react-core": "^5.2.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
