--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,6 +17,8 @@ jobs:
     needs: [static-checks]
     secrets:
       APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
+    with:
+      batch-id: pr-${{ github.event.number }}
 
   documentation:
     name: Documentation
