--- a/.github/workflows/tests-applitools.yml
+++ b/.github/workflows/tests-applitools.yml
@@ -9,10 +9,13 @@ on:
     secrets:
       APPLITOOLS_API_KEY:
         required: true
+    inputs:
+      batch-id:
+        type: string
 
 env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
-  APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha }}
+  APPLITOOLS_BATCH_ID: ${{ inputs.batch-id || github.ref_name }}
 
 jobs:
   run-tests:
